--- a/clientside/package.json
+++ b/clientside/package.json
@@ -10,9 +10,12 @@
     "ityped": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-emoji": "^0.5.0",
     "react-pdf": "^5.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.1.2",
+    "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
