--- a/clientside/package.json
+++ b/clientside/package.json
@@ -9,14 +9,15 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "ityped": "^1.0.3",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-emoji": "^0.5.0",
     "react-pdf": "^5.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "reactjs-pdf-reader": "^1.0.12",
     "react-scroll-to-bottom": "^4.1.2",
+    "reactjs-pdf-reader": "^1.0.12",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
