--- a/clientside/package.json
+++ b/clientside/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@intelllex/react-pdf": "^1.1.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -11,6 +13,7 @@
     "ityped": "^1.0.3",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-emoji": "^0.5.0",
     "react-pdf": "^5.3.2",
@@ -18,6 +21,7 @@
     "react-scripts": "4.0.3",
     "react-scroll-to-bottom": "^4.1.2",
     "reactjs-pdf-reader": "^1.0.12",
+    "simple-peer": "^9.11.0",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
